--- a/templates/app/go.mod.tmpl
+++ b/templates/app/go.mod.tmpl
@@ -7,14 +7,19 @@ toolchain go1.24.0
 require (
 	entgo.io/ent v0.14.5
 	github.com/go-chi/chi/v5 v5.2.3
-	github.com/godamri/helix-fnd v0.5.7
+	github.com/godamri/helix-fnd v1.0.4
 	github.com/kelseyhightower/envconfig v1.4.0
 	github.com/mattn/go-sqlite3 v1.14.32
 	github.com/stretchr/testify v1.11.1
 	go.opentelemetry.io/auto/sdk v1.1.0
-	go.opentelemetry.io/otel v1.24.0
-	go.opentelemetry.io/otel/trace v1.24.0
-	golang.org/x/crypto v0.39.0
+	go.opentelemetry.io/otel v1.39.0
+	go.opentelemetry.io/otel/trace v1.39.0
+	go.opentelemetry.io/otel/exporters/otlp/otlptrace/otlptracegrpc v1.28.0
+	go.opentelemetry.io/otel/sdk v1.28.0
+	
+	// Crypto: Align with helix-fnd latest
+	golang.org/x/crypto v0.46.0
+	
 	golang.org/x/sync v0.10.0
 	github.com/google/uuid v1.6.0
 	github.com/jackc/pgx/v5 v5.7.6
@@ -22,7 +27,7 @@ require (
 	github.com/prometheus/client_golang v1.23.2
 	
 	// VALIDATION DEPS
-	github.com/go-playground/validator/v10 v10.22.0
+	github.com/go-playground/validator/v10 v10.29.0
 	github.com/go-playground/universal-translator v0.18.1
 	github.com/go-playground/locales v0.14.1
 
